src/tests/testfiles/const/5.txt
testfiles/const/5.c:5:5: error: assignment of read-only variable 'aa'
aa = &a;
^
testfiles/const/5.c:6:5: error: assignment of read-only location '*aa'
*aa = a;
^
testfiles/const/5.c:9:5: error: assignment of read-only location 'blabla[4]'
blabla[4] = 0;
^
